Change site title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Willian Justen Photos</title>
+		<title>Vinicius Pacheco Photos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Willian Justen</h1>
+				<h1>Vinicius Pacheco</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
