--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+	<head>		
 		<title>Vinicius Pacheco Photos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
+	<body>		
 
 		<!-- Header -->
 			<header id="header">
@@ -25,6 +25,7 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
+				<h1>header</h1>
 				<div class="content">
 					<header>
 						<h2>Hey!</h2>
