usando cherry pick

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 				<h1>Vinicius Pacheco</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#quem-sou">Quem eu sou?</a></li>
-						<li><a href="#o-que-faco">O que eu faço?</a></li>
-						<li><a href="#trabalhos">Meus trabalhos</a></li>
-						<li><a href="#contact">Contato</a></li>
+						<li><a href="#intro">introdução</a></li>
+						<li><a href="#quem-eu-sou">Quem eu sou</a></li>
+						<li><a href="#O-que-faço">O que eu faço</a></li>
+						<li><a href="#trabalho">Meu trabalho</a></li>
+						<li><a href="#contato">Meu contato</a></li>
 					</ul>
 				</nav>
 			</header>
