--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Vinicius Pacheco 123456</h1>
+				<h1>Vinicius Pacheco</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
