--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
-				<h1>header</h1>
+				<h1>header with a comment</h1>
 				<div class="content">
 					<header>
 						<h2>Hey!</h2>
