--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<h1>header with a comment</h1>
 				<div class="content">
 					<header>
-						<h2>Hey!</h2>
+						<h2>Hey ho lets go!</h2>
 					</header>
 					<p>Bem vindo ao meu portfólio de fotos. Aqui você poderá ver algumas das fotos que tiro nas minhas viagens que faço enquanto
 						trabalho como nômade digital.</p>
