Edit animation speed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<header>
 						<h2>Quem eu sou</h2>
 					</header>
-					<p>Meu nome é Vinícius Vieira e sou desenvolvedor full stack.</p>
+					<p>Meu nome é <strong>Vinícius Vieira</strong> e sou desenvolvedor full stack na cidade de <strong>Santa Maria</strong>.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
