--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- O que eu faço -->
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do??</h2>
+						<h2>O que eu faço</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
