--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
 					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
 					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+						<a href="#o-que-eu-faco" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
 
-		<!-- O que eu faço -->
+		<!-- o-que-eu-faco -->
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>O que eu faço</h2>
+						<h2>What I Do??</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
 
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
+		<!--  -->
+			<section id="one" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Quem eu sou</h2>
+						<h2>Quem eu sou?</h2>
 					</header>
-					<p>Meu nome é <strong>Vinícius Vieira</strong> e sou desenvolvedor full stack na cidade de <strong>Santa Maria</strong>.</p>
+					<p>Me chamo vinicius, tenho 26 anos e amo programar.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
