--- a/index.html
+++ b/index.html
@@ -66,39 +66,52 @@
 			</section>
 
 
-			<section id="work" class="main style3 primary">
+			<section id="trabalhos" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Meus Trabalhos</h2>
+						<p>Fotos do site do Justen, instrutor do curso
+							<a href="http://unsplash.com/@willianjusten">Unsplash</a>.</p>
 					</header>
 
 					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
-						</div>
+					<div class="gallery">
+						<article class="from-left">
+							<a href="images/fulls/hallstatt-full.jpeg" class="image fit">
+								<img src="images/thumbs/hallstatt-thumb.jpeg" title="Um barco chegando na cidade de Hallstatt." alt="" />
+							</a>
+						</article>
+						<article class="from-right">
+							<a href="images/fulls/iceland-waterfall-full.jpeg" class="image fit">
+								<img src="images/thumbs/iceland-waterfall-thumb.jpeg" title="Uma cachoeira em Iceland vista através de um drone." alt=""
+								/>
+							</a>
+						</article>
+						<article class="from-left">
+							<a href="images/fulls/iceland-waves-full.jpeg" class="image fit">
+								<img src="images/thumbs/iceland-waves-thumb.jpeg" title="A famosa Black Sand Beach de Iceland" alt="" />
+							</a>
+						</article>
+						<article class="from-right">
+							<a href="images/fulls/jellyfish-full.jpeg" class="image fit">
+								<img src="images/thumbs/jellyfish-thumb.jpeg" title="Uma água-viva vista no Aquário de Valência" alt="" />
+							</a>
+						</article>
+						<article class="from-left">
+							<a href="images/fulls/kaiaks-full.jpeg" class="image fit">
+								<img src="images/thumbs/kaiaks-thumb.jpeg" title="Kaiaks num pier visto por um drone." alt="" />
+							</a>
+						</article>
+						<article class="from-right">
+							<a href="images/fulls/pink-lake-full.jpeg" class="image fit">
+								<img src="images/thumbs/pink-lake-thumb.jpeg" title="Um lago rosa na Espanha sendo visto por um drone." alt="" />
+							</a>
+						</article>
+					</div>
 
 				</div>
 			</section>
+
 
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
