--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#two">Quem sou eu</a></li>
-						<li><a href="#one">O que eu faço</a></li>
-						<li><a href="#work">Meu trabalho</a></li>
-						<li><a href="#contact">Contato</a></li>
+						<li><a href="#quem-eu-sou">Quem sou eu</a></li>
+						<li><a href="#que-eu-faco">O que eu faço</a></li>
+						<li><a href="#trabalho">Meu trabalho</a></li>
+						<li><a href="#contato">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -37,13 +37,13 @@
 					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
 					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+						<a href="#que-eu-faco" class="button style2 down">More</a>
 					</footer>
 				</div>
 				
 			</section>
-			<!-- Two -->
-				<section id="two" class="main style2 left dark fullscreen">
+			<!-- quem-eu-sou -->
+				<section id="quem-eu-sou" class="main style2 left dark fullscreen">
 					<div class="content box style2">
 						<header>
 							<h2>Quem eu sou</h2>
@@ -53,7 +53,7 @@
 					<a href="#work" class="button style2 down anchored">Next</a>
 				</section>
 
-			<section id="one" class="main style2 right dark fullscreen">
+			<section id="que-eu-faco" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>What I Do</h2>
@@ -66,7 +66,7 @@
 			</section>
 
 
-			<section id="trabalhos" class="main style3 primary">
+			<section id="trabalho" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Meus Trabalhos</h2>
@@ -113,8 +113,8 @@
 			</section>
 
 
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
+		<!-- contato -->
+			<section id="contato" class="main style3 secondary">
 				<div class="content">
 					<header>
 						<h2>Diga um oi :)</h2>
